add delete function

--- a/FoodRestaurant/Views/Menu/Index.cshtml
+++ b/FoodRestaurant/Views/Menu/Index.cshtml
@@ -20,7 +20,9 @@
 				</div>
 				<div>
 					<a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
+					<a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
 				</div>
+				
 			</div>	
 		
 		}
