--- a/FoodRestaurant/Views/Menu/Index.cshtml
+++ b/FoodRestaurant/Views/Menu/Index.cshtml
@@ -21,6 +21,7 @@
 				<div>
 					<a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
 					<a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+					<a class="btn btn-info" asp-action="Update" asp-route-id="@item.Id">Update</a>
 				</div>
 				
 			</div>	
