--- a/FoodRestaurant/Views/Menu/Update.cshtml
+++ b/FoodRestaurant/Views/Menu/Update.cshtml
@@ -1,5 +1,40 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model DishCreateViewModel
 @{
+	ViewData["Title"] = "Update";
 }
+<h3>Update It</h3>
+
+<form asp-action="Update" method="post">
+	
+	<div class="d-flex justify-content-center">
+		<input type="hidden" value="@Model.Dish.Id" asp-for="Dish.Id"/>
+		<label for="Name">New Name</label>
+		<input type="text" value="@Model.Dish.Name" asp-for="Dish.Name"/>
+	</div>
+	<div class="d-flex justify-content-center">
+		<label for="imageUrl">New url of image</label>
+		<input type="text" value="@Model.Dish.imageUrl" asp-for="Dish.imageUrl"/>
+	</div>
+	<div class="d-flex justify-content-center">
+		<label for="price">New Price</label>
+		<input type="number" value="@Model.Dish.price" asp-for="Dish.price"/>
+	</div>
+	<div class="d-flex justify-content-center">
+		<label for="Ingridients">Select new Ingridients</label>
+		<select asp-for="SelectedIngridientsId" multiple="multiple">
+			@foreach (var item in Model.Ingridients)
+			{
+				@if(Model.SelectedIngridientsId.Contains(item.Id)){
+					<option value="@item.Id" selected>@item.Name</option>
+				}
+				else
+				{
+					<option value="@item.Id">@item.Name</option>	
+				}
+			}
+		</select>
+	</div>
+	<div class="d-flex justify-content-center">
+		<button class="btn btn-info" type="submit">Update it</button>
+	</div>
+</form>
