add create func to ingredient , write cruds delete

--- a/FoodRestaurant/Views/Menu/Create.cshtml
+++ b/FoodRestaurant/Views/Menu/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model DishCreateViewModel
 @{
 	ViewData["Title"] = "Create";
+	ViewData["Controller"] = "Menu";
 }
 <h3 class="d-flex justify-content-center">Create an Dish</h3>
 <form asp-action="Create" method="post">
