--- a/FoodRestaurant/Views/Menu/Delete.cshtml
+++ b/FoodRestaurant/Views/Menu/Delete.cshtml
@@ -1,6 +1,7 @@
 ﻿@model FoodRestaurant.Models.Dish
 @{
 	ViewData["Title"] = "Delete " + Model.Name;
+	ViewData["Controller"] = "Menu";
 }
 <div class="d-flex justify-content-center">
 	<h3>Deleting data</h3>
