--- a/FoodRestaurant/Views/Menu/Details.cshtml
+++ b/FoodRestaurant/Views/Menu/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@model FoodRestaurant.Models.Dish
 @{
 	ViewData["Title"] = Model.Name;
+	ViewData["Controller"] = "Menu";
 }
 <div class="container">
 	<div class="d-flex justify-content-center">
