--- a/FoodRestaurant/Views/Ingredient/Index.cshtml
+++ b/FoodRestaurant/Views/Ingredient/Index.cshtml
@@ -1,3 +1,23 @@
-﻿@model FoodRestaurant.Models.Ingridients
+﻿@model List<FoodRestaurant.Models.Ingridients>
 @{
+	ViewData["Title"] = "Ingredients";
+	ViewData["Controller"] = "Ingredient";
 }
+<div class="d-flex justify-content-center">
+	<h3>Our Ingredients!</h3>
+</div>
+<div class="d-flex justify-content-center">
+	<ul>
+		@foreach (var item in Model) 
+		{
+			
+			<li>
+				<div>
+					@item.Name
+					<a class="btn btn-info">add here functions later</a>	
+				</div>
+			</li>	
+				
+		}
+	</ul>
+</div>
