--- a/FoodRestaurant/Views/Shared/_Layout.cshtml
+++ b/FoodRestaurant/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                        <li class="nav-item" style="margin: auto;">
-                           <form asp-controller="Menu" asp-action="Index" method="get">
+                           <form asp-controller="@ViewData["Controller"]" asp-action="Index" method="get">
                                <input value="@ViewData["Message"]" style="width: 80%; float: left; border-top-left-radius: 20px; border-bottom-left-radius: 20px; background: transparent;" type="text" name="searchString" class="form-control"/>
                                 <button style="width: 20%; float: left; border: none; background: transparent; height: 40px;" type="submit">search</button>
                            </form>
