--- a/FoodRestaurant/Views/Ingredient/Index.cshtml
+++ b/FoodRestaurant/Views/Ingredient/Index.cshtml
@@ -14,7 +14,7 @@
 			<li>
 				<div>
 					@item.Name
-					<a class="btn btn-info">add here functions later</a>	
+					<a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>	
 				</div>
 			</li>	
 				
