--- a/FoodRestaurant/Views/Ingredient/Index.cshtml
+++ b/FoodRestaurant/Views/Ingredient/Index.cshtml
@@ -15,6 +15,7 @@
 				<div>
 					@item.Name
 					<a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>	
+					<a class="btn btn-info" asp-action="Update" asp-route-id="@item.Id">Update</a>
 				</div>
 			</li>	
 				
